--- a/home.html
+++ b/home.html
@@ -20,9 +20,9 @@
 </head>
 <body class="font-poppins bg-white text-gray-800 flex flex-col min-h-screen">
   <!-- Header -->
-  <header class="bg-gradient-to-r from-gray-100 via-white to-gray-100 shadow-lg border-b border-gray-200 sticky top-0 z-50 backdrop-blur-sm">
-    <div class="max-w-7xl mx-auto p-2 md:p-3">
-      <div class="flex items-center justify-between">
+  <header class="bg-white/90 shadow border-b border-gray-200 sticky top-0 z-[60] rounded-b-2xl md:rounded-none">
+    <div class="max-w-7xl mx-auto px-4 md:px-8 h-16 md:h-20 relative">
+      <div class="h-full flex items-center justify-between gap-3">
         <a href="#home" class="flex items-center gap-2">
           <img src="assets/Logo.png" alt="Logo" class="h-16 md:h-20 drop-shadow-lg transition-transform duration-300 hover:scale-105">
           <span class="hidden sm:inline font-extrabold text-primary">Bafoto Booth</span>
@@ -32,8 +32,14 @@
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
           </svg>
         </button>
-        <nav id="nav-menu" class="hidden md:block mt-2 md:mt-0">
-          <ul class="flex flex-col md:flex-row md:gap-2 lg:gap-3 font-semibold text-xs md:text-sm border-t pt-2 md:border-0 md:pt-0">
+  <nav id="nav-menu" class="as-sidebar hidden md:block fixed md:static inset-y-0 left-0 w-64 bg-white md:bg-transparent shadow-2xl md:shadow-none border-r border-gray-200 md:border-0 transform -translate-x-full md:transform-none transition-transform duration-300 z-[70] rounded-r-2xl md:rounded-none p-4 md:p-0">
+          <div class="md:hidden flex items-center justify-between mb-3">
+            <span class="font-extrabold text-primary">Menu</span>
+            <button id="nav-close" class="inline-flex items-center justify-center p-2 rounded border border-gray-300 text-gray-700 hover:bg-gray-100" aria-label="Tutup menu">
+              <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/></svg>
+            </button>
+          </div>
+          <ul class="flex flex-col md:flex-row md:gap-2 lg:gap-3 font-semibold text-xs md:text-sm">
             <li class="py-0.5 md:py-0"><a href="#home" class="text-primary underline underline-offset-4 block px-2 py-1.5 rounded-lg hover:bg-gray-100">Home</a></li>
             <li class="py-0.5 md:py-0"><a href="#product" class="hover:text-primary transition-colors block px-2 py-1.5 rounded-lg hover:bg-gray-100">Product</a></li>
             <li class="py-0.5 md:py-0"><a href="#about" class="hover:text-primary transition-colors block px-2 py-1.5 rounded-lg hover:bg-gray-100">About</a></li>
@@ -100,20 +106,20 @@
         <div class="bg-white p-6 rounded-2xl shadow-xl border border-blue-100 hover:shadow-2xl hover:-translate-y-2 transition flex flex-col items-center group">
           <img src="https://images.unsplash.com/photo-1578376706507-35e6dd7af19c?w=294&dpr=1&h=294&auto=format&fit=crop&q=60" alt="Paket 1" class="w-full h-44 object-cover rounded-xl mb-4 group-hover:scale-105 transition-transform">
           <h3 class="text-2xl font-bold mb-2 text-primary">Paket 1</h3>
-          <p class="text-gray-700">Anda akan mendapatkan 2 Strip Photo, dan 5 photo digital</p>
-          <span class="block mt-4 text-primary font-extrabold text-xl">Rp 15.000,00-</span>
+          <p class="text-gray-700">Anda akan mendapatkan 1 Strip Photo, dan 5 photo digital</p>
+          <span class="block mt-4 text-primary font-extrabold text-xl">Rp 10.000,00-</span>
         </div>
         <div class="bg-white p-6 rounded-2xl shadow-xl border border-blue-100 hover:shadow-2xl hover:-translate-y-2 transition flex flex-col items-center group">
           <img src="https://plus.unsplash.com/premium_photo-1732818659738-edd686a45d82?w=500&auto=format&fit=crop&q=60" alt="Paket 2" class="w-full h-44 object-cover rounded-xl mb-4 group-hover:scale-105 transition-transform">
           <h3 class="text-2xl font-bold mb-2 text-primary">Paket 2</h3>
           <p class="text-gray-700">Anda akan mendapatkan 2 Strip Photo, dan 10 photo digital</p>
-          <span class="block mt-4 text-primary font-extrabold text-xl">Rp 20.000,00-</span>
+          <span class="block mt-4 text-primary font-extrabold text-xl">Rp 15.000,00-</span>
         </div>
         <div class="bg-white p-6 rounded-2xl shadow-xl border border-blue-100 hover:shadow-2xl hover:-translate-y-2 transition flex flex-col items-center group">
           <img src="https://plus.unsplash.com/premium_photo-1697945800806-e5d8fe424928?w=500&auto=format&fit=crop&q=60" alt="Paket 3" class="w-full h-44 object-cover rounded-xl mb-4 group-hover:scale-105 transition-transform">
           <h3 class="text-2xl font-bold mb-2 text-primary">Paket 3</h3>
           <p class="text-gray-700">Anda akan mendapatkan 4 Strip Photo, dan 20 Photo digital</p>
-          <span class="block mt-4 text-primary font-extrabold text-xl">Rp 30.000,00-</span>
+          <span class="block mt-4 text-primary font-extrabold text-xl">Rp 20.000,00-</span>
         </div>
       </div>
     </section>
